<resources>
    <string name="app_name">AndroidAlertDialogExample</string>
    <string name="firstalert">FirstAlert</string>
    <string name="secondalert">SecondAlert</string>
    <string name="thirdalert">ThirdAlert</string>
    <string name="samplelistviewalert">SampleListView</string>
    <string name="radioalert">RadioButton</string>
    <string name="checkalert">CheckBox</string>
    <string-array name="chooise">
        <item>Pepsi</item>
        <item>Seven Up</item>
        <item>Spirit Cane</item>
        <item>Coke</item>
        <item>Pran Up</item>
        <item>Orange</item>
    </string-array>
</resources>